BUG-632: Pull TCP-MD5 bundles into SP edition
TCP-MD5 support is the next feature to hit BGPCEP, affecting
dependencies of both BGP and PCEP artifacts. This patch prepares SP
edition such that when the changes land it will not experience any
issues.

Change-Id: Id6bd622b2dc4f2364483c93d798a883390864cf3
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/distributions/serviceprovider/pom.xml
+++ b/distributions/serviceprovider/pom.xml
@@ -135,6 +135,45 @@ see https://git.opendaylight.org/gerrit/#/c/390/
     </dependency>
 
     <!--
+         BGPCEP: TCP-MD5 artifacts
+         -->
+    <dependency>
+      <groupId>org.opendaylight.bgpcep</groupId>
+      <artifactId>tcpmd5-api</artifactId>
+      <version>${bgpcep.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.bgpcep</groupId>
+      <artifactId>tcpmd5-api-cfg</artifactId>
+      <version>${bgpcep.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.bgpcep</groupId>
+      <artifactId>tcpmd5-jni</artifactId>
+      <version>${bgpcep.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.bgpcep</groupId>
+      <artifactId>tcpmd5-jni-cfg</artifactId>
+      <version>${bgpcep.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.bgpcep</groupId>
+      <artifactId>tcpmd5-netty</artifactId>
+      <version>${bgpcep.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.bgpcep</groupId>
+      <artifactId>tcpmd5-netty-cfg</artifactId>
+      <version>${bgpcep.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.bgpcep</groupId>
+      <artifactId>tcpmd5-nio</artifactId>
+      <version>${bgpcep.version}</version>
+    </dependency>
+
+    <!--
          BGPCEP: topology artifacts
          -->
     <dependency>
