BUG-632: add TCP-MD5 configuration fragments
This patch adds the prerequisite TCP-MD5 configuration fragments, which
are optionally referred to by both BGP and PCEP configuration.

Change-Id: Ie3c93ba5840a198f5a814e92c514748acd2f4cda
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/distributions/serviceprovider/pom.xml
+++ b/distributions/serviceprovider/pom.xml
@@ -172,6 +172,11 @@ see https://git.opendaylight.org/gerrit/#/c/390/
       <artifactId>tcpmd5-nio</artifactId>
       <version>${bgpcep.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.opendaylight.bgpcep</groupId>
+      <artifactId>tcpmd5-controller-config</artifactId>
+      <version>${bgpcep.version}</version>
+    </dependency>
 
     <!--
          BGPCEP: topology artifacts
