Fix TCP-MD5 config not being included
Change-Id: I1489fff5f3333867007503b5f44c5f7c550f9611
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/distributions/serviceprovider/pom.xml
+++ b/distributions/serviceprovider/pom.xml
@@ -524,6 +524,7 @@ see https://git.opendaylight.org/gerrit/#/c/390/
                 bgp-controller-config,
                 pcep-controller-config,
                 programming-controller-config,
+                tcpmd5-controller-config,
               </includeArtifactIds>
               <includeGroupIds>
                 org.opendaylight.bgpcep,
