Revert OpenDove to release & add missing OF bundle
Change-Id: I180264744f40329e8df144cc74c1f72f16945fea
Signed-off-by: Luis Gomez <ecelgp@gmail.com>

--- a/distributions/virtualization/pom.xml
+++ b/distributions/virtualization/pom.xml
@@ -133,32 +133,32 @@ see https://git.opendaylight.org/gerrit/#/c/390/
     <dependency>
       <groupId>org.opendaylight.opendove</groupId>
       <artifactId>odmc</artifactId>
-      <version>0.5.1-1-SNAPSHOT</version>
+      <version>0.5.1</version>
     </dependency>
 
     <dependency>
       <groupId>org.opendaylight.opendove</groupId>
       <artifactId>odmc.implementation</artifactId>
-      <version>0.5.1-1-SNAPSHOT</version>
+      <version>0.5.1</version>
     </dependency>
 
     <dependency>
       <groupId>org.opendaylight.opendove</groupId>
       <artifactId>odmc.rest</artifactId>
-      <version>0.5.1-1-SNAPSHOT</version>
+      <version>0.5.1</version>
     </dependency>
 
 
     <dependency>
       <groupId>org.opendaylight.opendove</groupId>
       <artifactId>odmc.rest.northbound</artifactId>
-      <version>0.5.1-1-SNAPSHOT</version>
+      <version>0.5.1</version>
     </dependency>
 
     <dependency>
       <groupId>org.opendaylight.opendove</groupId>
       <artifactId>odmc.rest.southbound</artifactId>
-      <version>0.5.1-1-SNAPSHOT</version>
+      <version>0.5.1</version>
     </dependency>
 
   </dependencies>
