Including SNMP and OpenDove SNAPSHOT in distros
Change-Id: I4d8907152042e32e6e20b1febd575e12666a0bbc
Signed-off-by: Luis Gomez <ecelgp@gmail.com>

--- a/distributions/serviceprovider/pom.xml
+++ b/distributions/serviceprovider/pom.xml
@@ -429,7 +429,7 @@ see https://git.opendaylight.org/gerrit/#/c/390/
     <dependency>
       <groupId>org.opendaylight.snmp4sdn</groupId>
       <artifactId>snmp4sdn</artifactId>
-      <version>0.1.2</version>
+      <version>0.1.2-1-SNAPSHOT</version>
     </dependency>
 
   </dependencies>
