--- a/distributions/base/pom.xml
+++ b/distributions/base/pom.xml
@@ -64,6 +64,19 @@ see https://git.opendaylight.org/gerrit/#/c/390/
       <artifactId>openflow-protocol-spi</artifactId>
       <version>0.5-SNAPSHOT</version>
     </dependency>
+
+    <!-- legacy openflow plugin -->
+    <dependency>
+      <groupId>org.opendaylight.controller</groupId>
+      <artifactId>protocol_plugins.openflow</artifactId>
+      <version>0.4.2-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.controller.thirdparty</groupId>
+      <artifactId>org.openflow.openflowj</artifactId>
+      <version>1.0.2</version>
+    </dependency>
+
   </dependencies>
   <build>
     <resources>
