BUG-1277 Reflection of OFJava's ByteBufUtils move on OFPlugin
- added the introduced bundle as dependency to distributions/base

Change-Id: I5e552e5f3a27084b918ef256116b13ac84bae6cb
Signed-off-by: Michal Rehak <mirehak@cisco.com>

--- a/distributions/base/pom.xml
+++ b/distributions/base/pom.xml
@@ -64,6 +64,11 @@ see https://git.opendaylight.org/gerrit/#/c/390/
       <artifactId>openflow-protocol-spi</artifactId>
       <version>0.5-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>org.opendaylight.openflowjava</groupId>
+      <artifactId>util</artifactId>
+      <version>0.5-SNAPSHOT</version>
+    </dependency>
 
     <!-- legacy openflow plugin -->
     <dependency>
