--- a/distributions/base/pom.xml
+++ b/distributions/base/pom.xml
@@ -39,6 +39,11 @@ see https://git.opendaylight.org/gerrit/#/c/390/
     <!-- openflowplugin -->
     <dependency>
       <groupId>org.opendaylight.openflowplugin</groupId>
+      <artifactId>openflowplugin-api</artifactId>
+      <version>0.0.3-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.openflowplugin</groupId>
       <artifactId>openflowplugin</artifactId>
       <version>0.0.3-SNAPSHOT</version>
     </dependency>
