--- a/distributions/base/pom.xml
+++ b/distributions/base/pom.xml
@@ -27,13 +27,28 @@ see https://git.opendaylight.org/gerrit/#/c/390/
     <!-- ovsdb -->
     <dependency>
       <groupId>org.opendaylight.ovsdb</groupId>
-      <artifactId>ovsdb</artifactId>
-      <version>0.5.1-SNAPSHOT</version>
+      <artifactId>library</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.opendaylight.ovsdb</groupId>
-      <artifactId>ovsdb.northbound</artifactId>
-      <version>0.5.1-SNAPSHOT</version>
+      <artifactId>plugin</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.ovsdb</groupId>
+      <artifactId>northbound</artifactId>
+      <version>0.6.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.ovsdb</groupId>
+      <artifactId>schema.openvswitch</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.ovsdb</groupId>
+      <artifactId>schema.hardwarevtep</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
     </dependency>
     
     <!-- openflowplugin -->
