Removing Affinity from SP edition
Change-Id: I0ad21f92846a15d8ed24249039ce803437f9a0bc
Signed-off-by: Luis Gomez <ecelgp@gmail.com>

--- a/distributions/serviceprovider/pom.xml
+++ b/distributions/serviceprovider/pom.xml
@@ -36,7 +36,7 @@ see https://git.opendaylight.org/gerrit/#/c/390/
       <scope>provided</scope>
     </dependency>
 
-    <!-- affinity -->
+<!-- commenting Affinity 
     <dependency>
       <groupId>org.opendaylight.affinity</groupId>
       <artifactId>affinity</artifactId>
@@ -90,7 +90,7 @@ see https://git.opendaylight.org/gerrit/#/c/390/
       <artifactId>analytics.northbound</artifactId>
       <version>0.4.2-SNAPSHOT</version>
     </dependency>
-
+-->
 
     <!--
          BGPCEP: required IETF models
