--- a/distributions/virtualization/pom.xml
+++ b/distributions/virtualization/pom.xml
@@ -32,8 +32,13 @@ see https://git.opendaylight.org/gerrit/#/c/390/
     <!-- ovsdb --> 
     <dependency>
       <groupId>org.opendaylight.ovsdb</groupId>
-      <artifactId>neutron</artifactId>
-      <version>0.7.0-SNAPSHOT</version>
+      <artifactId>openstack.net-virt</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.ovsdb</groupId>
+      <artifactId>openstack.net-virt-providers</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
     </dependency>
 
     <!-- vtn -->
