Initial karaf indexing feature for integration and karaf distro.
REQUIRES: https://git.opendaylight.org/gerrit/#/c/10080 (controller)
REQUIRES: https://git.opendaylight.org/gerrit/#/c/10105/ (openflowjava)
REQUIRES: https://git.opendaylight.org/gerrit/#/c/10114/ (openflowplugin)

Change-Id: I3600b1e150196463153677aef5b36b13c4f03c64
Signed-off-by: Ed Warnicke <eaw@cisco.com>

--- a/distributions/pom.xml
+++ b/distributions/pom.xml
@@ -18,6 +18,7 @@
     <module>virtualization/</module>
     <module>serviceprovider/</module>
     <module>extra/toaster</module>
+    <module>extra/karaf</module>
   </modules>
   <profiles>
     <profile>
