Adding l2switch features
You can try this with

feature:install odl-l2switch-switch
feature:install odl-restconf

Then point mininet at it and pingall will work

You can then look at:

GET http://localhost:8181/restconf/operational/network-topology:network-topology/

And see the host information as well
(nodes with host-track augmentaions)
and the the linkes that bring them into the topology.

Change-Id: I97fd05464f6796fdb670c428b688db64d5b7f8a3
Signed-off-by: Ed Warnicke <eaw@cisco.com>

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -26,7 +26,7 @@
     <dependency>
       <groupId>org.opendaylight.controller</groupId>
       <artifactId>features-mdsal</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>${feature.mdsal.version}</version>
       <classifier>features</classifier>
       <type>xml</type>
     </dependency>
@@ -34,6 +34,13 @@
       <groupId>org.opendaylight.openflowplugin</groupId>
       <artifactId>features-openflowplugin</artifactId>
       <version>0.0.3-SNAPSHOT</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.l2switch</groupId>
+      <artifactId>features-l2switch</artifactId>
+      <version>0.1.0-SNAPSHOT</version>
       <classifier>features</classifier>
       <type>xml</type>
     </dependency>
