Adding controller ADSAL & NSF features
1) Feature Tests Pass:
https://jenkins.opendaylight.org/controller/job/controller-merge/org.opendaylight.controller$features-adsal/2652/testReport/
https://jenkins.opendaylight.org/controller/job/controller-merge/org.opendaylight.controller$features-nsf/2652/testReport/

2) Features Comply with Guidelines: Yes (features starts with odl-, with description & no Start-levels)
        https://git.opendaylight.org/gerrit/gitweb?p=controller.git;a=blob;f=features/adsal/src/main/resources/features.xml;h=e12ca8e5e990acc860dc9e56e4eed57ed9c2a0e0;hb=a2670916a9c216311479463bbe2d707444afedc5
        https://git.opendaylight.org/gerrit/gitweb?p=controller.git;a=blob;f=features/nsf/src/main/resources/features.xml;h=8dc51f1644c48dd31e9bf911681ea6819d7dc32b;hb=a2670916a9c216311479463bbe2d707444afedc5

3) Features Tested: Features have been tested for functionality with
	a) feature:install odl-adsal-all
	b) feature:install odl-nsf-all

4) Integration Test Impact : This brings in ADSAL & NSF bundles. Since we dont have any AD-SAL southbound plugin features yet,
                             It will be difficult to run any existing test to make a difference. As soon as we have OVSDB or
                             ADSAL-Openflow or MD-SAL adaptor features available, we can start to see results :-).

Change-Id: Iaedfa69a96f954ff85a10fd622b5a0c42518076c
Signed-off-by: Madhu Venugopal <mavenugo@gmail.com>

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -31,6 +31,18 @@
       <type>xml</type>
     </dependency>
     <dependency>
+      <groupId>org.opendaylight.controller</groupId>
+      <artifactId>features-adsal</artifactId>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.controller</groupId>
+      <artifactId>features-nsf</artifactId>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
+    <dependency>
       <groupId>org.opendaylight.openflowplugin</groupId>
       <artifactId>features-openflowplugin</artifactId>
       <version>0.0.3-SNAPSHOT</version>
