--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
     <feature.mdsal.version>1.1-SNAPSHOT</feature.mdsal.version>
     <feature.flow.version>1.1-SNAPSHOT</feature.flow.version>
     <feature.yangtools.version>0.6.2-SNAPSHOT</feature.yangtools.version>
+    <feature.adsal.version>0.8.1-SNAPSHOT</feature.adsal.version>
+    <feature.nsf.version>0.4.2-SNAPSHOT</feature.nsf.version>
     <karaf.branding.version>1.0.0-SNAPSHOT</karaf.branding.version>
     <karaf.version>3.0.1</karaf.version>
     <maven.surefire.version>2.16</maven.surefire.version>
@@ -142,6 +144,22 @@
           <classifier>features</classifier>
           <type>xml</type>
         </dependency>
+        <!-- AD-SAL Related Features -->
+        <dependency>
+          <groupId>org.opendaylight.controller</groupId>
+          <artifactId>features-adsal</artifactId>
+          <version>${feature.adsal.version}</version>
+          <classifier>features</classifier>
+          <type>xml</type>
+        </dependency>
+        <dependency>
+          <groupId>org.opendaylight.controller</groupId>
+          <artifactId>features-nsf</artifactId>
+          <version>${feature.nsf.version}</version>
+          <classifier>features</classifier>
+          <type>xml</type>
+        </dependency>
+
         <!-- test to validate features.xml -->
         <dependency>
           <groupId>org.opendaylight.yangtools</groupId>
