Adding features-bgp features
1) Feature Tests Pass: https://jenkins.opendaylight.org/bgpcep/job/bgpcep-verify/org.opendaylight.bgpcep$features-bgp/3144/testReport/
2) Features Comply with Guidelines: bgp/feature/src/main/resources/feature.xml
	a) Feature Names: odl-bgpcep-all - which includes the following: odl-bgpcep-dependencies, odl-bgpcep-controller-config, odl-bgpcep-util, odl-bgpcep-concepts, odl-bgpcep-linkstate, odl-bgpcep-pcep-impl, odl-bgpcep-parser, odl-bgpcep-rib, odl-bgpcep-testtool
	b) Features Descriptions: Present https://wiki.opendaylight.org/view/Runtime:Karaf_Features_Guidelines#Description
	c) Features Start-Levels: No start-level
3) Features Tested: Features have been tested for functionality with
	a) feature:install odl-bgpcep-all
	b) feature:install odl-integration-compatible-with-all
4) Integration Test Impact: none

Change-Id: I4d78e0a550ad9b1c86e94f5a769de38e4be9b1c0
Signed-off-by: Heath Kesler <hkesler@savoirtech.com>

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -49,6 +49,12 @@
       <type>xml</type>
     </dependency>
     <dependency>
+       <groupId>org.opendaylight.bgpcep</groupId>
+       <artifactId>features-bgp</artifactId>
+       <classifier>features</classifier>
+       <type>xml</type>
+    </dependency>
+    <dependency>
       <groupId>org.opendaylight.openflowplugin</groupId>
       <artifactId>features-openflowplugin</artifactId>
       <version>0.0.3-SNAPSHOT</version>
